# bebop_api

./: CMakeLists.txt  README.md  package.xml
Test/: BebopKernelTest.cpp  BebopVideoTest.cpp  SyncListenerTest.cpp  main.cpp
Test/Mock/: CBebopInterface.h
launch/: bebop_api.launch
src/: bebop_api_node.cpp
src/DroneState/: IState.h  StateManager.cpp  StateManager.h  States.cpp  States.h
src/Kernel/: BebopKernel.cpp  BebopKernel.h
src/Listeners/: AsynchronousEvents.cpp  AsynchronousEvents.h  SyncronousEvents.cpp  SyncronousEvents.h
src/Publishers/: VideoPublisher.cpp  VideoPublisher.h
